--- a/src/components/sections/navbar/NavBar.css
+++ b/src/components/sections/navbar/NavBar.css
@@ -54,7 +54,7 @@ img{
 .navbar-btn{
         width: 200px;
         height: 50px;
-        background-color: #FFD95A;
+        background-color: #FFE569;
         border-radius: 8px;
         border: none;
         cursor: pointer;
@@ -64,8 +64,7 @@ img{
 }
 
 .navbar-btn:hover{
-    margin-top: 10px;
-    box-shadow:  5px 5px 5px #FFF5B8;
+        
     color: #681313;
 }
 
@@ -86,6 +85,7 @@ img{
     content: '|';
     font-weight: bold;
     padding: 20px;
+    color: white;
 }
 
 .navbar-mobile{
