--- a/src/components/sections/cookies/cookies.css
+++ b/src/components/sections/cookies/cookies.css
@@ -4,14 +4,12 @@
     color: white;
     width: 100%;
     position: fixed;
-    top: 550px;
+    bottom: 0px;
     display: flex;
     justify-content: space-around;
     align-items: center;
-    
     left: 0;
     right: 0;
-    font-family: 'Poppins';   
 }
 
 .wrapper-cookies::-webkit-scrollbar{
