--- a/src/components/sections/navbar/NavBar.css
+++ b/src/components/sections/navbar/NavBar.css
@@ -30,6 +30,8 @@ img{
 
 .navbar-list{
     padding: 10px;
+    display: flex;
+    align-items: center;
 }
 
 
@@ -94,6 +96,32 @@ img{
 
 .navbar-list-mobile{
     display: none;
+}
+
+.navbar-item-down{
+    color:  var(--primary-color-navbar--text);
+    padding: 20px;
+    font-family: var(--primary-font-text);
+    gap: 4px;
+    color: white;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+}
+
+.navbar-item__down{
+    
+    position: fixed;
+    top: 140px;
+    color: white;
+    background-color: #002984;
+    padding: 20px;
+    z-index: 20;
+    display: flex;
+    flex-direction: column;
+    
+
+
 }
 
 
