--- a/src/components/sections/navbar/NavBar.css
+++ b/src/components/sections/navbar/NavBar.css
@@ -111,7 +111,7 @@ img{
 
 .navbar-item__down{
     
-    position: fixed;
+    position: absolute;
     top: 140px;
     color: white;
     background-color: #002984;
