--- a/src/components/sections/navbar/NavBar.css
+++ b/src/components/sections/navbar/NavBar.css
@@ -3,8 +3,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap');
 
 :root{
-    --primary-color-navbar: #00369c;
-    --secundary-color-navbar: #002984;
+    --primary-color-navbar: #141618;
+    --secundary-color-navbar: #1b1b1b;
     --primary-color-navbar--text: #fff;
     --primary-font-text: 'Poppins';
 }
@@ -46,7 +46,7 @@ img{
 }
 
 .navbar-item:hover{
-    color:  white;
+    color:  #fffb00;
     padding: 20px;
     font-family: var(--primary-font-text);
     background-color: #fefefe23;
@@ -56,18 +56,17 @@ img{
 .navbar-btn{
         width: 200px;
         height: 50px;
-        background-color: #FFE569;
+        background-color: #070e20;
         border-radius: 8px;
         border: none;
         cursor: pointer;
-        color:  black;
+        color:  #fff;
         font-family: 'Poppins';
         font-weight: 'bold';
 }
 
 .navbar-btn:hover{
-        
-    color: #681313;
+    color: #fffb00;
 }
 
 
@@ -87,7 +86,7 @@ img{
     content: '|';
     font-weight: bold;
     padding: 20px;
-    color: white;
+    color: black;
 }
 
 .navbar-mobile{
@@ -103,19 +102,18 @@ img{
     padding: 20px;
     font-family: var(--primary-font-text);
     gap: 4px;
-    color: white;
+    color: black;
     align-items: center;
     display: flex;
     flex-direction: column;
 }
 
 .navbar-item__down{
-    
     position: absolute;
     top: 160px;
     border-radius: 9px;
-    color: white;
-    background-color: #002984;
+    color: black;
+    background-color: #141618;
     z-index: 20;
     width: 30%;
     display: flex;
@@ -123,9 +121,6 @@ img{
     padding: 20px;
     justify-content: center;
     align-items: center;
-    
-
-
 }
 
 .navbar-item__down-item{
