arrgelando fuentes y nuevas secciones

--- a/src/components/Botones/botonUp/botonUp.css
+++ b/src/components/Botones/botonUp/botonUp.css
@@ -2,7 +2,7 @@
     position: fixed;
     bottom: 20px;
     right: 20px;
-    background-color: #8696FE;
+    background-color: #fa0303;
     color: #fff;
     border: none;
     display: flex;
