--- a/src/components/Heros/heroHome/heroHome.css
+++ b/src/components/Heros/heroHome/heroHome.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap');
 
 .hero_home{
@@ -21,7 +21,7 @@
     font-size: 60px;
     text-align: center;
     color: #fff;
-    font-family: 'Lobster', cursive;
+    font-family: 'Kaushan Script', cursive;
 }
 
 .hero_home__subtitulo{
