--- a/src/components/sections/seccionCreencias/seccionCreencias.css
+++ b/src/components/sections/seccionCreencias/seccionCreencias.css
@@ -40,10 +40,11 @@
     left: 0;
     width: 100%;
     height: 100%;
-    color: #fff;
+    color: #ffffff;
     z-index: 2;
-    font-family: 'Poppins', sans-serif;
     cursor: pointer;
+    font-size: 20px;
+    font-family: 'Courier New', Courier, monospace;
 }
 
 .alerta{
@@ -68,13 +69,15 @@
 }
 
 .alerta_titulo{
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Kaushan Script', cursive;
+    font-size: 40px;
     margin-bottom: 15px;
 }
 
 .alerta_descrip{
-    font-size: 20px;
+    font-size: 18px;
     margin-bottom: 15px;
+    font-family: 'Poppins', sans-serif;
 }
 
 .alerta_boton{
