--- a/src/components/sections/seccionCreencias/seccionCreencias.css
+++ b/src/components/sections/seccionCreencias/seccionCreencias.css
@@ -1,4 +1,17 @@
+@import url('https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap');
+
+.nuestra-creencia{
+    padding: 30px;
+}
+
+.nuestra_titulo{
+    text-align: center;
+    font-size: 36px;
+    font-weight: 300;
+    margin-bottom: 10px;
+    font-family: 'Kaushan Script', cursive;
+}
 
 .creencias{
     display: flex;
